--- a/res/layout/dialog_content_list.xml
+++ b/res/layout/dialog_content_list.xml
@@ -12,9 +12,9 @@
 
         <ImageView
             android:id="@+id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dialog_icon_padding_for_other_icons"
+            android:layout_width="@dimen/dialog_icon_size"
+            android:layout_height="@dimen/dialog_icon_size"
+            android:scaleType="centerInside"
             android:src="@drawable/ic_icon_settings_sign" />
 
         <LinearLayout
