--- a/res/layout/fragment_content.xml
+++ b/res/layout/fragment_content.xml
@@ -124,6 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:visibility="gone"
                 android:layout_below="@+id/errorMessageButtonLinearLayout"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
