--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -9,6 +9,7 @@
             android:icon="@drawable/ic_icon_settings_date_born"
             android:key="preference_date_born"
             android:title="@string/preference_date_1" />
+
         <Preference
             android:id="@+id/preference_zodiac_sign"
             android:icon="@drawable/ic_icon_settings_sign"
@@ -37,13 +38,27 @@
             android:id="@+id/preference_show_notifications"
             android:defaultValue="true"
             android:key="preference_show_notifications"
+            android:summary="@string/preference_show_notification_2"
             android:title="@string/preference_show_notification_1"
-            android:widgetLayout="@layout/preference_widget_checkbox_custom" android:summary="@string/preference_show_notification_2"/>
+            android:widgetLayout="@layout/preference_widget_checkbox_custom" />
+
         <TimePreference
             android:id="@+id/preference_show_notifications_time"
-            android:key="preference_show_notifications_time"
             android:defaultValue="08:00"
+            android:key="preference_show_notifications_time"
             android:summary="08:00"
             android:title="@string/preference_time_1" />
     </PreferenceCategory>
+    <PreferenceCategory
+        android:key="proxy_preference_category"
+        android:title="@string/preference_proxy" >
+        <CheckBoxPreference
+            android:id="@+id/preference_proxy"
+            android:defaultValue="false"
+            android:icon="@drawable/ic_icon_all_other"
+            android:key="preference_proxy"
+            android:title="@string/preference_proxy"
+            android:widgetLayout="@layout/preference_widget_checkbox_custom" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
