add support for 2019 forecasts in english

--- a/res/values/values_ENG_horoscope_com.xml
+++ b/res/values/values_ENG_horoscope_com.xml
@@ -48,5 +48,6 @@
         <item>pig</item>
     </string-array>
     
+    <string name="next_year_predict_en">The forecast for 2019 below!</string>
     <string name="horoscope_com_copyright">© horoscope.com</string>
 </resources>
