add support for 2019 forecasts in spanish

--- a/res/values/values_ES_horoscopo_com.xml
+++ b/res/values/values_ES_horoscopo_com.xml
@@ -46,5 +46,6 @@
         <item>cerdo</item>
     </string-array>
     
+    <string name="next_year_predict_es">El pronóstico para 2019 a continuación!</string>
     <string name="horoscopo_com_copyright">© horoscopo.com</string>
 </resources>
